Fix page shifting due to scrollbar
Page content is no longer affected by Y scrollbar, and X scrollbar will always be hidden now

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -20,6 +20,12 @@
     background-color: #e7e7e7;
 }
 
+body { 
+    overflow:scroll; 
+    overflow-y:scroll;
+    overflow-x:hidden;
+}
+
 .jumbotron {
     position: relative;
     color: #fff;
